--- a/ilgi.css
+++ b/ilgi.css
@@ -55,15 +55,34 @@ body {
 }
 
 
+/* Menü Stilleri */
+.menu-container {
+  background-color: #333;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.social-icons a {
+  font-size: 40px;
+  margin-left: 30px;
+  color: #3ECCE2;
+}
+
+.social-icons a:hover {
+  color: #900374;
+}
+
 .menu {
   background-color: #333;
   color: #fff;
   padding: 10px 20px;
   margin: 0;
   padding: 0;
-  display: flex; /* Menü öğelerini yatay olarak sırala */
-  justify-content: flex-end; /* Öğeleri sağa hizala */
-  align-items: center; /* Dikey hizalamayı ortala */
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .menu li {
@@ -71,10 +90,43 @@ body {
   font-size: 28px;
   margin: 0 20px;
 }
+
 .menu li a:hover {
-  color: #900374; /* İkonun üzerine gelindiğindeki renk */
+  color: #900374;
 }
+
 .menu li a {
   color: #fff;
   text-decoration: none;
+}
+
+
+
+/* Medya sorgusu: 768px ve altındaki ekranlar için stil ayarlamaları */
+@media (max-width: 768px) {
+
+
+  .menu li {
+    font-size: 20px;
+    margin: 10px 0;
+  }
+
+  .social-icons {
+    margin-top: 20px;
+  }
+}
+
+/* Medya sorgusu: 480px ve altındaki ekranlar için stil ayarlamaları */
+@media (max-width: 480px) {
+ 
+
+  .menu li {
+    font-size: 5px;
+    margin: 5px 0;
+  }
+
+  .social-icons a {
+    font-size: 10px;
+    margin-left: 7px;
+  }
 }
