--- a/style.css
+++ b/style.css
@@ -1,31 +1,32 @@
+
 /* Genel Stiller */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #50D79C;
+     background-color: #438CDF !important;
     color: #333;
 }
+
 
 /* Menü Stilleri */
 .menu-container {
   background-color: #333;
   padding: 10px;
   display: flex;
-  justify-content: space-between; /* Menüyü üst sayfayı kaplayacak şekilde ayarla */
-  align-items: center; /* Dikey hizalamayı ortala */
+  justify-content: space-between;
+  align-items: center;
 }
 
 .social-icons a {
-  font-size: 40px; /* İkon büyüklüğünü istediğiniz boyuta ayarlayın */
-  margin-left: 30px; /* İkonlar arasında boşluk bırakmak için gerektiğinde ayarlayın */
-  color: #3ECCE2; /* İstediğiniz renk */
+  font-size: 40px;
+  margin-left: 30px;
+  color: #3ECCE2;
 }
 
 .social-icons a:hover {
-  color: #900374; /* İkonun üzerine gelindiğindeki renk */
+  color: #900374;
 }
-
 
 .menu {
   background-color: #333;
@@ -33,9 +34,9 @@ body {
   padding: 10px 20px;
   margin: 0;
   padding: 0;
-  display: flex; /* Menü öğelerini yatay olarak sırala */
-  justify-content: flex-end; /* Öğeleri sağa hizala */
-  align-items: center; /* Dikey hizalamayı ortala */
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .menu li {
@@ -43,40 +44,76 @@ body {
   font-size: 28px;
   margin: 0 20px;
 }
+
 .menu li a:hover {
-  color: #900374; /* İkonun üzerine gelindiğindeki renk */
+  color: #900374;
 }
+
 .menu li a {
   color: #fff;
   text-decoration: none;
 }
 
-/* slider stilleri */
-
+/* Slider Stilleri */
 .slider-container {
-	
   position: relative;
   width: 100%;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  
 }
-/* Slider container'ı sayfanın ortasında ve yatay olarak hizalar. Genişliği sayfanın tamamını kaplar ve dikeyde ortalanır. */
 
+/* Medya sorgusu: 768px ve altındaki ekranlar için stil ayarlamaları */
+@media (max-width: 768px) {
+
+
+  .menu li {
+    font-size: 20px;
+    margin: 10px 0;
+  }
+
+  .social-icons {
+    margin-top: 20px;
+  }
+}
+
+/* Medya sorgusu: 480px ve altındaki ekranlar için stil ayarlamaları */
+@media (max-width: 480px) {
+ 
+
+  .menu li {
+    font-size: 5px;
+    margin: 5px 0;
+  }
+
+  .social-icons a {
+    font-size: 10px;
+    margin-left: 7px;
+  }
+  .slide .content h3 {
+    font-size: 7px;
+  }
+
+  .slide .content p {
+    font-size: 6px;
+  }
+
+}
+
+/* Slider container'ı sayfanın ortasında ve yatay olarak hizalar. Genişliği sayfanın tamamını kaplar ve dikeyde ortalanır. */
 .slider {
-	 border: 3px solid black;
+  border: 3px solid black;
   position: relative;
-  height:60%;
+  height: 60%;
   width: 100%;
   max-width: 1300px;
   margin: 0 auto;
   background-color: #E8FCF4;
   display: flex;
 }
-/* Slider içeriği genişliği %50'e kadar olacak şekilde ayarlanır ve belirli bir maksimum genişliğe sahip olur. Slider ortalanır ve beyaz bir arka plana sahip olur. */
 
+/* Slider içeriği genişliği %50'e kadar olacak şekilde ayarlanır ve belirli bir maksimum genişliğe sahip olur. Slider ortalanır ve beyaz bir arka plana sahip olur. */
 .slide {
   display: none;
   text-align: left;
@@ -84,26 +121,24 @@ body {
   padding: 15px;
   overflow: hidden;
 }
-/* Her slaytın varsayılan olarak görünmez olmasını sağlar ve içerik merkezi hizalanır. Slaytın içeriği tam genişlikte yer kaplar ve bir iç kenar boşluğu bulunur. */
 
+/* Her slaytın varsayılan olarak görünmez olmasını sağlar ve içerik merkezi hizalanır. Slaytın içeriği tam genişlikte yer kaplar ve bir iç kenar boşluğu bulunur. */
 .slide img {
   width: 30%;
   max-height: 450px;
-   align-items: left;
+  align-items: left;
   object-fit: left;
 }
-/* Slayt içindeki resimlerin genişliği %100 olacak şekilde ayarlanır ve maksimum yükseklik belirlenir. Resimlerin orantılı olarak yerleştirilmesini sağlar. */
 
+/* Slayt içindeki resimlerin genişliği %100 olacak şekilde ayarlanır ve maksimum yükseklik belirlenir. Resimlerin orantılı olarak yerleştirilmesini sağlar. */
 .slide .content {
   margin-top: 100px;
- 
   text-align: right;
- width: 80%;
+  width: 80%;
   margin-right: 10%;
-
 }
-/* Slayt içeriği için bir boşluk (margin) ekler. */
 
+/* Slayt içeriği için bir boşluk (margin) ekler. */
 .slider-navigation {
   position: absolute;
   bottom: 100px;
@@ -113,8 +148,8 @@ body {
   justify-content: center;
   align-items: center;
 }
-/* Slider navigasyonu alt kısma hizalanır ve yatayda ortalanır. */
 
+/* Slider navigasyonu alt kısma hizalanır ve yatayda ortalanır. */
 .slider-navigation label {
   width: 10px;
   height: 10px;
@@ -123,13 +158,13 @@ body {
   margin: 0 5px;
   cursor: pointer;
 }
-/* Slider navigasyon noktalarının görünümü belirlenir. */
 
+/* Slider navigasyon noktalarının görünümü belirlenir. */
 .slider-navigation label:hover {
   background-color: #888;
 }
-/* Slider navigasyon noktalarının üzerine gelindiğinde arka plan rengi değişir. */
 
+/* Slider navigasyon noktalarının üzerine gelindiğinde arka plan rengi değişir. */
 .slider-controls {
   position: absolute;
   top: 50%;
@@ -139,22 +174,8 @@ body {
   width: 100%;
   padding: 0 20px;
 }
+
 /* Slider kontrol düğmeleri yatayda ortalanır ve slaytın üst orta kısmında yer alır. */
-
-/*.slider-controls button {
-  background-color: transparent;
-  border: none;
-  color: #888;
-  font-size: 24px;
-  cursor: pointer;
-}
-/* Slider kontrol düğmelerinin görünümü belirlenir. */
-
-.slider-controls button:focus {
-  outline: none;
-  
-  
-}
 .slider .slide .content {
   text-align: right;
 }
@@ -163,27 +184,21 @@ body {
 .slider .slide .content p {
   text-align: right;
 }
+
 .content {
   text-align: right;
 }
+
 .text-container {
   position: absolute;
   top: 15%;
   right: 0;
- 
   transform: translateY(-20%);
   transform: translateX(-20%);
   text-align: left;
 }
 
-
-
-
-/* Slider kontrol düğmelerine odaklandığında etrafında bir vurgu çizgisi görünmez. */
-
-
 /* Diğer Stiller */
-
 header, main, footer {
     padding: 20px;
 }
@@ -216,21 +231,9 @@ h2 {
     text-align: center;
 }
 
-.profile-image img {
-    max-width: 200px;
-    height: auto;
-    border-radius: 50%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.bio p {
-    font-size: 18px;
-    line-height: 1.5;
-    margin-top: 20px;
-}
-
 .activity-list li,
 .sport-list li {
+	background-color:#585DE6;
     display: flex;
     align-items: center;
     margin-bottom: 20px;
@@ -238,6 +241,7 @@ h2 {
 
 .activity-image,
 .sport-image {
+	
     width: 80px;
     height: 80px;
     overflow: hidden;
@@ -304,5 +308,19 @@ footer {
 
     footer {
         font-size: 12px;
+    }
+	/* Medya sorgusu: 786px ve altındaki ekranlar için stil ayarlamaları */
+@media (max-width: 786px) {
+    h2 {
+        font-size: 7px;
+    }
+}
+
+/* Medya sorgusu: 480px ve altındaki ekranlar için stil ayarlamaları */
+@media (max-width: 480px) {
+    h2 {
+        font-size: 5px;
+    }
 }
 }
+
